--- a/ServletContextAttributeL/etc/web.xml
+++ b/ServletContextAttributeL/etc/web.xml
@@ -10,4 +10,13 @@
     <welcome-file>index.htm</welcome-file>
   </welcome-file-list>
   
+  <servlet>
+  	<servlet-name>Servlet</servlet-name>
+  	<servlet-class>com.example.servlet.MyServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>Servlet</servlet-name>
+  	<url-pattern>/servlet.so</url-pattern>
+  </servlet-mapping>
 </web-app>
