fix error url-pattern was miss spell

--- a/ServletContextAttributeL/etc/web.xml
+++ b/ServletContextAttributeL/etc/web.xml
@@ -17,6 +17,6 @@
   
   <servlet-mapping>
   	<servlet-name>Servlet</servlet-name>
-  	<url-pattern>/servlet.so</url-pattern>
+  	<url-pattern>/servlet.do</url-pattern>
   </servlet-mapping>
 </web-app>
